Update to the ModDev Gradle plugin (#7885)
Co-authored-by: Sebastian Hartte <shartte@users.noreply.github.com>